[feat] - correction junit